@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Dec  6 17:05:27 2001 -->
+<!-- Sun Dec 30 01:03:30 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -135,6 +135,7 @@ Author
 <li><a href="#5">How can I delete old, unconfirmed messages from TMDA's pending queue?</a> <br>
 <li><a href="#6">How do I allow my ezmlm mailing lists to pass through TMDA?</a> <br>
 <li><a href="#7">How can I prevent BBDB from asking about 'dated' addresses?</a><br>
+<li><a href="#8">Why don't my user+detail addresses work with Sendmail virtualdomains?</a><br>
 </ol>
 
 <hr>
@@ -287,6 +288,29 @@ to filter the addresses before adding them to the database.
 
 <hr>
 
+<li><b>
+<a name="8">I'm running Sendmail, and noticed that my user+detail addresses don't
+work if the message is sent to a virtual domain.  What's the problem?
+</b>
+<br><br>
+You need some special entries in the virtusertable (and a modern version
+of sendmail - at least 8.10.1 to get full functionality) to preserve the
++detail portion of the address.  For example, if you currently have
+the following in your virtusertable:
+
+<blockquote><pre>
+bobby@peru.com    bobby
+</blockquote></pre>
+
+you can change this to:
+
+<blockquote><pre>
+bobby+*@peru.com  bobby+%2
+</blockquote></pre>
+
+See the virtusertable section in your Sendmail's cf/README for the
+full details.
+<hr>
 </TD><!-- end of body cell -->
 </TR><!-- end of sidebar/body row -->
 </TABLE><!-- end of page table -->
